--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -54,10 +54,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BaseBLL">
-      <HintPath>D:\Source\Resources\C#\Ojvar-ORM\BaseBLL.dll</HintPath>
+      <HintPath>..\..\..\ojvar-orm\BLL\bin\Debug\BaseBLL.dll</HintPath>
     </Reference>
     <Reference Include="BaseDAL">
-      <HintPath>D:\Source\Resources\C#\Ojvar-ORM\BaseDAL.dll</HintPath>
+      <HintPath>..\..\..\ojvar-orm\BLL\bin\Debug\BaseDAL.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net35\Newtonsoft.Json.dll</HintPath>
