--- a/AntennaServiceInstaller/App.config
+++ b/AntennaServiceInstaller/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="serviceName" value="AntennaService"/>
-		<add key="serverName" value="127.0.0.1"/>
+		<add key="hostName" value="127.0.0.1"/>
 	</appSettings>
 </configuration>
