--- a/AntennaService/App.config
+++ b/AntennaService/App.config
@@ -1,10 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<appSettings>
-		<add key="AntennaHost" value="192.168.1.200" />
-		<add key="AntennaPort" value="100" />
-		<add key="ServerPort" value="10001" />
-		<add key="Interval" value="15" />
-		<add key="ConnectionString" value="Data Source=.; User Id=sa; Password=1365; Initial Catalog=GasStation" />
-	</appSettings>
+  <appSettings>
+    <add key="AntennaHost" value="192.168.1.200" />
+    <add key="AntennaPort" value="100" />
+    <add key="ServerPort" value="10001" />
+    <add key="Interval" value="15" />
+    <add key="ConnectionString" value="Data Source=.; User Id=sa; Password=1365; Initial Catalog=GasStation" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
