--- a/GasStation/GasStation.csproj
+++ b/GasStation/GasStation.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Forms\Forms\CustomerForm.Designer.cs">
       <DependentUpon>CustomerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Forms\ExistenceCustomerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Forms\ExistenceCustomerForm.Designer.cs">
+      <DependentUpon>ExistenceCustomerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -237,6 +243,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Forms\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Forms\ExistenceCustomerForm.resx">
+      <DependentUpon>ExistenceCustomerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
